--- a/src/components/index/postlink.scss
+++ b/src/components/index/postlink.scss
@@ -3,29 +3,31 @@ a {
   color: inherit;
 }
 
-h4 {
+h5 {
   margin-bottom: 6px;
 }
 
-h4 span {
+h5 .date {
   color: #bbb;
-  font-size: 0.9rem;
+  font-size: 0.8rem;
 }
 
 div[lang="ar"] {
+  direction: rtl;
   font-family: "Cairo";
 
-  h4 {
+  h5 {
     margin-bottom: 8px;
     font-family: "Cairo";
   }
 
   p {
     line-height: 1.4;
-    font-size: 0.9rem;
+    font-size: 0.8rem;
   }
 }
 
 p {
   line-height: 1.2;
+  font-size: 0.88rem;
 }
